tests/unit/default/syntax-error/086-add-pk-table-dot-name.x.t
---- IN ----
+PK%table.name|
---- OUT ----
---- ERR ----
syntax: expected EOL after `+PK%table.name` near `|` at position 14 - at line 1
---- EXIT ----
1
